# Hospital-Management-System

./: Appointment.cpp  Appointment.h  AppointmentPage.cpp  AppointmentPage.h  Bill.cpp  Bill.h  BillingPage.cpp  BillingPage.h  CMakeLists.txt  Doctor.cpp  Doctor.h  DoctorPage.cpp  DoctorPage.h  HospitalSystem.cpp  HospitalSystem.h  Patient.cpp  Patient.h  PatientPage.h  Patientpage.cpp  Person.cpp  Person.h  README.md  dashboardwidget.cpp  dashboardwidget.h  hospital.pro  main.cpp  mainwindow.cpp  mainwindow.h  patientdialog.cpp  patientdialog.h
